[Silver I] Title: 후보 추천하기, Time: 80 ms, Memory: 11988 KB -BaekjoonHub